Added licensing information

--- a/AutoTask.Api/AutoTask.Api.csproj
+++ b/AutoTask.Api/AutoTask.Api.csproj
@@ -11,6 +11,7 @@
     <PackageTags>AutoTask API</PackageTags>
     <PackageReleaseNotes>Initial implementation</PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
