--- a/AutoTask.Api/AutoTask.Api.csproj
+++ b/AutoTask.Api/AutoTask.Api.csproj
@@ -9,7 +9,7 @@
     <RepositoryUrl>https://github.com/panoramicdata/AutoTask.Api</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>AutoTask API</PackageTags>
-    <PackageReleaseNotes>Adde GetVersion() to show the WDSL version in use</PackageReleaseNotes>
+    <PackageReleaseNotes>Added debug level ILogger compatible logging of requests and responses.</PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Company>Panoramic Data Limited</Company>
@@ -18,6 +18,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
     <PackageReference Include="Nerdbank.GitVersioning" Version="2.3.138">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
