--- a/AutoTask.Api/AutoTask.Api.csproj
+++ b/AutoTask.Api/AutoTask.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -9,7 +9,7 @@
     <RepositoryUrl>https://github.com/panoramicdata/AutoTask.Api</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>AutoTask API</PackageTags>
-    <PackageReleaseNotes>Added debug level ILogger compatible logging of requests and responses.</PackageReleaseNotes>
+    <PackageReleaseNotes>Refactored and supports create/delete.</PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Company>Panoramic Data Limited</Company>
