--- a/AutoTask.Api/AutoTask.Api.csproj
+++ b/AutoTask.Api/AutoTask.Api.csproj
@@ -1,39 +1,47 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <Copyright>Panoramic Data Limited 2019</Copyright>
-    <Description>AutoTask API</Description>
-    <PackageProjectUrl>https://github.com/panoramicdata/AutoTask.Api</PackageProjectUrl>
-    <PackageIconUrl>https://www.autotask.com/images/default-source/solutions/psa-logo-colored-icon.png?sfvrsn=3</PackageIconUrl>
-    <RepositoryUrl>https://github.com/panoramicdata/AutoTask.Api</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PackageTags>AutoTask API</PackageTags>
-    <PackageReleaseNotes>Fixed bug in GetAllAsync when no results are returned.</PackageReleaseNotes>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Company>Panoramic Data Limited</Company>
-    <Authors>David Bond, Daniel Abbatt</Authors>
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<LangVersion>latest</LangVersion>
+		<Copyright>Panoramic Data Limited 2019</Copyright>
+		<Description>AutoTask API</Description>
+		<PackageProjectUrl>https://github.com/panoramicdata/AutoTask.Api</PackageProjectUrl>
+		<PackageIcon>Icon.png</PackageIcon>
+		<RepositoryUrl>https://github.com/panoramicdata/AutoTask.Api</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageTags>AutoTask API</PackageTags>
+		<PackageReleaseNotes>Fixed bug in GetAllAsync when no results are returned.</PackageReleaseNotes>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<Company>Panoramic Data Limited</Company>
+		<Authors>David Bond, Daniel Abbatt</Authors>
+	<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Nerdbank.GitVersioning" Version="2.3.138">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="System.ServiceModel.Duplex" Version="4.5.3" />
-    <PackageReference Include="System.ServiceModel.Http" Version="4.5.3" />
-    <PackageReference Include="System.ServiceModel.NetTcp" Version="4.5.3" />
-    <PackageReference Include="System.ServiceModel.Security" Version="4.5.3" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="3.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="3.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.0.0" />
+		<PackageReference Include="Nerdbank.GitVersioning" Version="3.0.25">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+		<PackageReference Include="System.ServiceModel.Duplex" Version="4.6.0" />
+		<PackageReference Include="System.ServiceModel.Http" Version="4.6.0" />
+		<PackageReference Include="System.ServiceModel.NetTcp" Version="4.6.0" />
+		<PackageReference Include="System.ServiceModel.Security" Version="4.6.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <WCFMetadata Include="Connected Services" />
-  </ItemGroup>
+	<ItemGroup>
+		<WCFMetadata Include="Connected Services" />
+	</ItemGroup>
+	<ItemGroup>
+		<None Remove="Icon.png" />
+	</ItemGroup>
+	<ItemGroup>
+		<None Include="Icon.png" Pack="true" PackagePath="" />
+		<Folder Include="Properties\" />
+	</ItemGroup>
 
 </Project>
