--- a/AutoTask.Api/AutoTask.Api.csproj
+++ b/AutoTask.Api/AutoTask.Api.csproj
@@ -10,7 +10,7 @@
 		<RepositoryUrl>https://github.com/panoramicdata/AutoTask.Api</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>AutoTask API</PackageTags>
-		<PackageReleaseNotes>Fixed bug in GetAllAsync when no results are returned.</PackageReleaseNotes>
+		<PackageReleaseNotes>Added integration code support (with thanks to Terry Glinsey).</PackageReleaseNotes>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<Company>Panoramic Data Limited</Company>
