--- a/AutoTask.Api/AutoTask.Api.csproj
+++ b/AutoTask.Api/AutoTask.Api.csproj
@@ -3,7 +3,8 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<LangVersion>latest</LangVersion>
-		<Copyright>Panoramic Data Limited 2019</Copyright>
+		<Nullable>enable</Nullable>
+		<Copyright>Panoramic Data Limited 2019, 2020</Copyright>
 		<Description>AutoTask API</Description>
 		<PackageProjectUrl>https://github.com/panoramicdata/AutoTask.Api</PackageProjectUrl>
 		<PackageIcon>Icon.png</PackageIcon>
