--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -20,6 +20,10 @@ on:
   schedule:
     - cron: '20 4 * * 6'
 
+env:
+  CONFIGURATION: Release
+  DOTNET_VERSION: 6.0.x
+
 jobs:
   analyze:
     name: Analyze
@@ -48,11 +52,13 @@ jobs:
         
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: ${{ env.DOTNET_VERSION }}
 
     - name: Build
       shell: pwsh
       run: |
-        dotnet build --configuration Release
+        dotnet build --configuration ${{ env.CONFIGURATION }}
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
