Convert to user secrets; fix test warnings

--- a/AutoTask.Api.Test/AutoTask.Api.Test.csproj
+++ b/AutoTask.Api.Test/AutoTask.Api.Test.csproj
@@ -5,10 +5,12 @@
 		<LangVersion>latest</LangVersion>
 		<Nullable>enable</Nullable>
 		<IsPackable>false</IsPackable>
+		<UserSecretsId>a26d149e-2390-455d-b45d-40a90fc41ff9</UserSecretsId>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="FluentAssertions" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
 		<PackageReference Include="PanoramicData.SheetMagic" Version="3.0.101" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0" />
